[package]
name = "ps_procs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(target_os = "linux")'.dependencies]
# pager         = "0.16"
procfs        = "0.12.0"
users         = "0.11"
# which         = "4"

[target.'cfg(target_os = "macos")'.dependencies]
libproc       = "0.10"
libc          = "0.2"
# errno         = "0.2"
# pager         = "0.16"
# users         = "0.11"
# which         = "4"

[target.'cfg(target_os = "windows")'.dependencies]
winapi        = { version = "0.3", features = ["handleapi", "minwindef", "psapi", "securitybaseapi", "tlhelp32", "winbase", "winnt"] }
chrono        = "0.4"
libc          = "0.2"

